# archnav

./: .editorconfig  .gitignore  .qmlls.ini  CLAUDE.md  Cargo.toml  PKGBUILD  README.md  SECURITY-UPGRADES.md  archnav-toggle  archnav.desktop  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: archnav.desktop
docs/: architecture.md  tagstore-format.md
qml/: BookmarkDialog.qml  Main.qml  PreviewPanel.qml  ResultsList.qml  SearchBar.qml  Style.qml  TagDialog.qml  TestWindow.qml
src/: config.rs  context_menu.cpp  context_menu.h  context_menu.rs  file_opener.cpp  file_opener.h  file_opener.rs  ipc.rs  main.rs  qt_app.cpp  qt_debug_handler.cpp  system_tray.cpp  system_tray.h  system_tray.rs  tagcli.rs  tagstore.rs  toggle.rs
src/bridge/: mod.rs  preview_bridge.rs  search_engine.rs  tag_bridge.rs
src/preview/: archive.rs  directory.rs  media.rs  mod.rs  text.rs
src/search/: database.rs  engine.rs  integrity.rs  mod.rs  query.rs  scanner.rs  trigram.rs  watcher.rs
src/tagstore/: fingerprint.rs  index.rs  lock.rs  mod.rs  tests.rs  xattrs.rs
src/tagstore/testdata/: python-index-v1.json
