[package]
name = "archnav"
version = "0.1.0"
edition = "2021"
description = "Fast file navigator for KDE Wayland"
license = "MIT"

[dependencies]
# Qt/QML bridge
cxx = "1.0.95"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }

# Search engine
rusqlite = { version = "0.31", features = ["bundled"] }
notify = { version = "6", features = ["serde"] }
walkdir = "2"
regex = "1"
regex-syntax = "0.8"
globset = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Markdown rendering
pulldown-cmark = "0.12"

# Archive preview
zip = "0.6"
tar = "0.4"
flate2 = "1"
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Paths and system
dirs = "5"
libc = "0.2"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
